--- a/sass/main.scss
+++ b/sass/main.scss
@@ -22,6 +22,9 @@ img {
     border-radius: 0.5rem;
 }
 
+body {
+	background-color: $color-white;
+}
 .container {
 	background-color: $color-white;
 	width: 100%;
@@ -32,14 +35,14 @@ img {
 } 
 
 h1{
-	font-size: 3.3rem;
+	font-size: 3.2rem;
 	font-style: normal;
 	font-weight: 500;
 }
 
 .navbar-container {
 	width: 100%;
-	height: 10rem;
+	height: 8rem;
 	position: fixed;
 	top: 0;
 	// padding-left: 23rem;
@@ -56,6 +59,7 @@ h1{
 	display: flex;
 	justify-content: space-between;
 	width: 84rem;
+	padding: 0 4rem;
 	
 	
 }
@@ -65,7 +69,15 @@ h1{
 		display: flex;
 	}
 
-.navbar-menu {
+
+.toggle-nav {
+    display:none;
+}
+
+
+@media screen and (min-width: 768px) {
+
+	.navbar-menu {
 	// overflow: hidden;
 	// position: fixed;
 	display: flex;
@@ -82,7 +94,7 @@ h1{
 		align-self: flex-end;
 		// font-size: 1.4rem;
 		// color: $color-black;
-		padding: 0 25px;
+		padding: 0 2.5rem;
 
 		a{
 			font-size: 1.4rem;
@@ -93,20 +105,83 @@ h1{
 
 	
 	}
+	}
+
 }
 
-// .wrapper {
-// 	margin: 0 auto;
-//     display: flex;
-//     flex-direction: column;
-//     height: 100%;
-//     width: 100%;
-//     padding-top: 10rem;
-//     // padding-right: 23rem;
-//     // padding-left: 23rem;
-//     justify-content: center;
-//     align-items: center;
-// }
+
+@media screen and (max-width: 768px) {
+
+	.navbar-menu {
+	// overflow: hidden;
+	// position: fixed;
+	display: flex;
+	align-items: center;
+	position: relative;
+	
+	
+	ul{
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		list-style: none;
+		position: absolute;
+		background-color: $color-white;
+		border-radius: 0.5rem;
+		padding:1rem;
+		top: 105%;
+		// width: 100%;
+		right: 0;
+		
+
+		&.active {
+
+		display: none;
+		}
+
+	}
+
+	
+	li {
+		// align-self: flex-end;
+		// font-size: 1.4rem;
+		// color: $color-black;
+		padding: 1rem 2.5rem;
+		display: flex;
+
+		a{
+			font-size: 1.4rem;
+			font-weight: normal;
+			font-style: normal;
+			color: $color-black;
+		}
+
+	
+	}
+
+	}
+
+	.toggle-nav {
+        padding:0.2rem 0.7rem;
+        float:left;
+        display: flex;
+        border: 0.2rem solid $color-bg-yellow;
+        // display:inline-block;
+        // box-shadow:0px 1px 1px rgba(0,0,0,0.15);
+      	border-radius:0.5rem;
+        background-color: $color-white;
+        // text-shadow:0px 1px 0px rgba(0,0,0,0.5);
+        color:$color-black;
+        font-size:2rem;
+        transition:color linear 0.15s;
+    }
+
+}
+
+
+
+
 
 .header { 
 	width: 100%;
