--- a/sass/core/_reset-min.scss
+++ b/sass/core/_reset-min.scss
@@ -99,11 +99,11 @@ section {
     display: flex;
 }
 
-body,
+/*body,
 html {
     width: 100%;
     height: 100%;
-}
+}*/
 
 body {
     -webkit-font-smoothing: antialiased;
